force-app/main/default/objects/Address__c/fields/AddressValidationStatus__c.field-meta.xml
<CustomField>
    <fullName>AddressValidationStatus__c</fullName>
    <label>Address Validation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Valid Address</fullName>
            </value>
            <value>
                <fullName>Invalid Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>