force-app/main/default/objects/Address__c/fields/Alley__c.field-meta.xml
<CustomField>
    <fullName>Alley__c</fullName>
    <label>Alley</label>
    <length>255</length>
    <type>Text</type>
</CustomField>