force-app/main/default/objects/Address__c/fields/City2__c.field-meta.xml
<CustomField>
    <fullName>City2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>City</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR 3</booleanFilter>
        <filterItems>
            <field>Affiliate_Value__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>City</value>
        </filterItems>
        <filterItems>
            <field>Affiliate_Value__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$User.Bypass_Lookup_Filter__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Affiliate_Value__c</referenceTo>
    <relationshipLabel>Addresses (City)</relationshipLabel>
    <relationshipName>AddressesCity</relationshipName>
    <type>Lookup</type>
</CustomField>