force-app/main/default/objects/Address__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <defaultValue>IF($UserRole.Name = &quot;ANI - Malaysia&quot;, &quot;Malaysia&quot;, 
    IF($UserRole.Name = &quot;ANI - Philippines&quot;, &quot;Philippines&quot;, 
    IF($UserRole.Name = &quot;ANI - Singapore&quot;, &quot;Singapore&quot;,
    IF($UserRole.Name = &quot;ANI - Thailand&quot;, &quot;Thailand&quot;,
    IF($UserRole.Name = &quot;ANI - Vietnam&quot;, &quot;Vietnam&quot;,
    IF($UserRole.Name = &quot;ANI - India&quot;, &quot;India&quot;,
    IF($UserRole.Name = &quot;ANI - ANZ&quot;, &quot;Australia&quot;,
    IF($UserRole.Name = &quot;ANI - Indonesia&quot;, &quot;Indonesia&quot;, 
    IF($UserRole.Name = &quot;ANI - Taiwan&quot;, &quot;Taiwan&quot;, &quot;&quot;)))))))))</defaultValue>
    <label>Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Andorra</fullName>
            </value>
            <value>
                <fullName>United Arab Emirates</fullName>
            </value>
            <value>
                <fullName>Afghanistan</fullName>
            </value>
            <value>
                <fullName>Antigua and Barbuda</fullName>
            </value>
            <value>
                <fullName>Anguilla</fullName>
            </value>
            <value>
                <fullName>Albania</fullName>
            </value>
            <value>
                <fullName>Armenia</fullName>
            </value>
            <value>
                <fullName>Angola</fullName>
            </value>
            <value>
                <fullName>Antarctica</fullName>
            </value>
            <value>
                <fullName>Argentina</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Aruba</fullName>
            </value>
            <value>
                <fullName>Aland Islands</fullName>
            </value>
            <value>
                <fullName>Azerbaijan</fullName>
            </value>
            <value>
                <fullName>Bosnia and Herzegovina</fullName>
            </value>
            <value>
                <fullName>Barbados</fullName>
            </value>
            <value>
                <fullName>Bangladesh</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>Burkina Faso</fullName>
            </value>
            <value>
                <fullName>Bulgaria</fullName>
            </value>
            <value>
                <fullName>Bahrain</fullName>
            </value>
            <value>
                <fullName>Burundi</fullName>
            </value>
            <value>
                <fullName>Benin</fullName>
            </value>
            <value>
                <fullName>Saint Barthélemy</fullName>
            </value>
            <value>
                <fullName>Bermuda</fullName>
            </value>
            <value>
                <fullName>Brunei Darussalam</fullName>
            </value>
            <value>
                <fullName>Bolivia, Plurinational State of</fullName>
            </value>
            <value>
                <fullName>Bonaire, Sint Eustatius and Saba</fullName>
            </value>
            <value>
                <fullName>Brazil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>