force-app/main/default/objects/Address__c/fields/DefaultAddress__c.field-meta.xml
<CustomField>
    <fullName>DefaultAddress__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Default Address</label>
    <type>Checkbox</type>
</CustomField>