force-app/main/default/objects/Address__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>District</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2 AND 3) OR 4 OR 5</booleanFilter>
        <filterItems>
            <field>Affiliate_Value__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>District</value>
        </filterItems>
        <filterItems>
            <field>Affiliate_Value__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Affiliate_Value__c.ParentAffiliateValue__c</field>
            <operation>equals</operation>
            <valueField>$Source.City2__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.To_be_archived__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$User.Bypass_Lookup_Filter__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Affiliate_Value__c</referenceTo>
    <relationshipLabel>Addresses (District)</relationshipLabel>
    <relationshipName>Addresses1</relationshipName>
    <type>Lookup</type>
</CustomField>