force-app/main/default/objects/Address__c/fields/Integration_Src__c.field-meta.xml
<CustomField>
    <fullName>Integration_Src__c</fullName>
    <label>Integration Src</label>
    <length>255</length>
    <type>Text</type>
</CustomField>