force-app/main/default/objects/Address__c/fields/MC_IN_Sync_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>MC_IN_Sync_Eligibility__c</fullName>
    <formula>ParentContact__c != null &amp;&amp; ParentContact__r.MC_IN_Sync_Eligibility__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC IN Sync Eligibility</label>
    <type>Checkbox</type>
</CustomField>