force-app/main/default/objects/Address__c/fields/ParentContact__c.field-meta.xml
<CustomField>
    <fullName>ParentContact__c</fullName>
    <label>Parent Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Addresses</relationshipLabel>
    <relationshipName>Addresses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>