force-app/main/default/objects/Address__c/fields/ParentHousehold__c.field-meta.xml
<CustomField>
    <fullName>ParentHousehold__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Addresses</relationshipLabel>
    <relationshipName>Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>