force-app/main/default/objects/Address__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <label>Postal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>