force-app/main/default/objects/Address__c/fields/StateProvince__c.field-meta.xml
<CustomField>
    <fullName>StateProvince__c</fullName>
    <label>State / Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>