force-app/main/default/objects/Address__c/fields/Street1__c.field-meta.xml
<CustomField>
    <fullName>Street1__c</fullName>
    <label>Street 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>