force-app/main/default/objects/Address__c/fields/SubDistrict__c.field-meta.xml
<CustomField>
    <fullName>SubDistrict__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub-District</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Affiliate_Value__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sub-District</value>
        </filterItems>
        <filterItems>
            <field>Affiliate_Value__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Affiliate_Value__c.ParentAffiliateValue__c</field>
            <operation>equals</operation>
            <valueField>$Source.District__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Affiliate_Value__c</referenceTo>
    <relationshipLabel>Addresses (Sub-District)</relationshipLabel>
    <relationshipName>Addresses2</relationshipName>
    <type>Lookup</type>
</CustomField>