force-app/main/default/objects/Address__c/fields/VillageName__c.field-meta.xml
<CustomField>
    <fullName>VillageName__c</fullName>
    <label>Village Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>