force-app/main/default/objects/Address__c/fields/VillageNo__c.field-meta.xml
<CustomField>
    <fullName>VillageNo__c</fullName>
    <label>Village No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>